0.2b, whitespace fix and duplicates gone

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -23,7 +23,7 @@ h4 { text-align: center; }
 
 #selectboxinfo {
     outline: black solid 1px;
-    width: 620px; 
+    width: 620px;
     min-height: 80px;
     max-height: 400px;
     background: rgb(255,255,255); background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(237,242,252,1) 100%);
@@ -31,8 +31,7 @@ h4 { text-align: center; }
 #selectboxtext {
     padding: 4px;
     margin: 4px;
-    float: left; 
-    padding: 4px;
+    float: left;
     font-family: monospace;
 }
 
